force-app/main/default/objects/Pet__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <label>Breed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Akita</fullName>
            </value>
            <value>
                <fullName>Alaskan Malamute</fullName>
            </value>
            <value>
                <fullName>American Cocker Spaniel</fullName>
            </value>
            <value>
                <fullName>Anatolian Shepherd</fullName>
            </value>
            <value>
                <fullName>Australian Shepherd</fullName>
            </value>
            <value>
                <fullName>Basenji</fullName>
            </value>
            <value>
                <fullName>Beagle</fullName>
            </value>
            <value>
                <fullName>Bernese Mountain Dog</fullName>
            </value>
            <value>
                <fullName>Bichon Frise</fullName>
            </value>
            <value>
                <fullName>Border Collie</fullName>
            </value>
            <value>
                <fullName>Boxer</fullName>
            </value>
            <value>
                <fullName>Bulldog</fullName>
            </value>
            <value>
                <fullName>Bullmastiff</fullName>
            </value>
            <value>
                <fullName>Cane Corso</fullName>
            </value>
            <value>
                <fullName>Chihuahua</fullName>
            </value>
            <value>
                <fullName>Cocker Spaniel</fullName>
            </value>
            <value>
                <fullName>Dachshund</fullName>
            </value>
            <value>
                <fullName>Doberman Pinscher</fullName>
            </value>
            <value>
                <fullName>German Shepherd</fullName>
            </value>
            <value>
                <fullName>Golden Retriever</fullName>
            </value>
            <value>
                <fullName>Great Dane</fullName>
            </value>
            <value>
                <fullName>Kuvasz</fullName>
            </value>
            <value>
                <fullName>Labrador Retriever</fullName>
            </value>
            <value>
                <fullName>Maltese</fullName>
            </value>
            <value>
                <fullName>Medium Breeds</fullName>
            </value>
            <value>
                <fullName>Newfoundland</fullName>
            </value>
            <value>
                <fullName>Papillon</fullName>
            </value>
            <value>
                <fullName>Pomeranian</fullName>
            </value>
            <value>
                <fullName>Rottweiler</fullName>
            </value>
            <value>
                <fullName>Saint Bernard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>