force-app/main/default/objects/Pet__c/fields/Pet_Image__c.field-meta.xml
<CustomField>
    <fullName>Pet_Image__c</fullName>
    <label>Pet Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>