force-app/main/default/objects/Pet__c/fields/Post_Error__c.field-meta.xml
<CustomField>
    <fullName>Post_Error__c</fullName>
    <label>Post Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>