force-app/main/default/objects/Pet__c/validationRules/Age_must_be_a_positive_whole_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_must_be_a_positive_whole_number</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  Age__c &lt;= 0,
  MOD(Age__c, 1) &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>Age must be a positive whole number.</errorMessage>
</ValidationRule>