force-app/main/default/objects/Pet__c/validationRules/Intake_date_cannot_be_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Intake_date_cannot_be_in_the_future</fullName>
    <active>true</active>
    <errorConditionFormula>Intake_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Intake date cannot be in the future.</errorMessage>
</ValidationRule>