force-app/main/default/objects/Pet__c/validationRules/Pet_name_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Pet_name_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Pet name is required.</errorMessage>
</ValidationRule>