force-app/main/default/objects/Pet__c/validationRules/Pets_age.validationRule-meta.xml
<ValidationRule>
    <fullName>Pets_age</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Age__c &lt;= 0,
    Age__c &gt; 12
)</errorConditionFormula>
    <errorMessage>Pet&apos;s age must be greater than 0 and less than or equal to 12 years.</errorMessage>
</ValidationRule>