force-app/main/default/objects/Pet__c/validationRules/select_a_breed.validationRule-meta.xml
<ValidationRule>
    <fullName>select_a_breed</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Breed__c))</errorConditionFormula>
    <errorMessage>Please select a breed.</errorMessage>
</ValidationRule>