force-app/main/default/objects/Pet__c/listViews/Adopted_Pets.listView-meta.xml
<ListView>
    <fullName>Adopted_Pets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Adopted</value>
    </filters>
    <label>Adopted Pets</label>
</ListView>