force-app/main/default/objects/Pet__c/listViews/Pet_s_Available.listView-meta.xml
<ListView>
    <fullName>Pet_s_Available</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Pet&apos;s Available</label>
</ListView>